// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as disabled 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        Object {
          "backgroundColor": "#e5e5ea",
        },
      ]
    }
  />
</TouchableOpacity>
`;

exports[`should render text only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "600",
            "includeFontPadding": false,
            "marginHorizontal": 5,
            "textAlignVertical": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render text with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "600",
            "includeFontPadding": false,
            "marginHorizontal": 5,
            "textAlignVertical": "center",
          },
          Object {
            "color": "#aaa",
          },
          undefined,
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom content 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text>
      CUSTOM CONTENT
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        Object {
          "backgroundColor": "#000000",
        },
        undefined,
      ]
    }
  />
</TouchableOpacity>
`;

exports[`should render with image only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render with left image 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "left.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "600",
            "includeFontPadding": false,
            "marginHorizontal": 5,
            "textAlignVertical": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      Right Text
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with right image 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "600",
            "includeFontPadding": false,
            "marginHorizontal": 5,
            "textAlignVertical": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      Left Text
    </Text>
    <Image
      source={
        Object {
          "uri": "right.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;
